# glikoz

./: README.md  lint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: requirements.txt
src/glikoz/: __init__.py  report.py  summary.py
src/tests/: conftest.py  test_report.py  test_summary.py
