[project]
name = "glikoz"
version = "0.1.0"
description = "Glucose and insulin use data analysis for diabetes therapy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.22.3",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.1",
]