[project]
name = "glikoz"
version = "0.1.0"
description = "Glucose and insulin use data analysis for diabetes therapy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.22.3",
    "pandas>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.1",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.3.2.250926",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
