[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glikoz"
version = "0.1.0"
description = "Glucose and insulin use data analysis for diabetes therapy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.22.3",
    "pandas>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/glikoz"]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
]

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.3.2.250926",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "env",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["src/tests"]
